// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonText control to the left 1`] = `
<ButtonText
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={0}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  notheme={false}
  obj="ButtonText"
  onClick={[Function]}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "borderColor": "green",
      "color": "white",
    }
  }
  testing={true}
  text="test text"
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className="test-class"
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    id=""
    imageFile=""
    justify={0}
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noicon={false}
    noripple={false}
    notheme={false}
    obj="ButtonText"
    onClick={[Function]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "blue",
        "borderColor": "green",
        "color": "white",
      }
    }
    testing={true}
    text="test text"
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-text ripple test-class"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "blue",
            "borderColor": "green",
            "color": "white",
          }
        }
        visible={true}
      >
        <StyledComponent
          className="ui-button-text ripple test-class"
          disabled={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-kgoBCf",
                "isStatic": false,
                "lastClassName": "dOBixR",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "

	&:not(.nohover):hover {
		background-color: ",
                  [Function],
                  " ",
                  [Function],
                  ";
	}

	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-kgoBCf",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "blue",
              "borderColor": "green",
              "color": "white",
            }
          }
          visible={true}
        >
          <div
            className="ui-button-text ripple test-class sc-kgoBCf dOBixR"
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "blue",
                "borderColor": "green",
                "color": "white",
              }
            }
          >
            <styled.div
              justify={0}
              sizing="normal"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-chPdSV",
                      "isStatic": false,
                      "lastClassName": "emANqb",
                      "rules": Array [
                        "
	flex: 1;
	padding: 0 0.2em;
	text-align: ",
                        [Function],
                        ";
	",
                        [Function],
                        ";

	span {
		margin: 0 auto;
		user-select: none;
	}
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-chPdSV",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                justify={0}
                sizing="normal"
              >
                <div
                  className="sc-chPdSV emANqb"
                >
                  test text
                </div>
              </StyledComponent>
            </styled.div>
            <Icon
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              notheme={false}
              obj="Icon"
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              <Wrapper
                bottom=""
                className=""
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage=""
                focus={false}
                height=""
                iconName="bomb"
                id=""
                imageFile=""
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                notheme={false}
                obj="Icon"
                onError={[Function]}
                padding=""
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                theme={null}
                tooltip=""
                top=""
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "titleBarBackgroundColor": "#004358",
                      "titleBarForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.i
                    bottom=""
                    className="ui-icon fa fa-fw fa-bomb"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    iconName="bomb"
                    id=""
                    imageFile=""
                    left=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="Icon"
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    visible={true}
                    width=""
                    xcss={null}
                  >
                    <StyledComponent
                      bottom=""
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage=""
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-gqjmRU",
                            "isStatic": false,
                            "lastClassName": "iCGQxQ",
                            "rules": Array [
                              "
	text-align: center;
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
",
                            ],
                          },
                          "displayName": "styled.i",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-gqjmRU",
                          "target": "i",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height=""
                      iconName="bomb"
                      id=""
                      imageFile=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="Icon"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-gqjmRU iCGQxQ"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </StyledComponent>
                  </styled.i>
                </ThemeProvider>
              </Wrapper>
            </Icon>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonText>
`;

exports[`Test disabling of a ButtonText control 1`] = `
<ButtonText
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  notheme={false}
  obj="ButtonText"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    id=""
    imageFile=""
    justify={1}
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noicon={false}
    noripple={false}
    notheme={false}
    obj="ButtonText"
    onClick={[MockFunction]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text=""
    theme={null}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-text nohover"
        disabled={true}
        onClick={[Function]}
        style={Object {}}
        visible={true}
      >
        <StyledComponent
          className="ui-button-text nohover"
          disabled={true}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-kgoBCf",
                "isStatic": false,
                "lastClassName": "dkAsaB",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "

	&:not(.nohover):hover {
		background-color: ",
                  [Function],
                  " ",
                  [Function],
                  ";
	}

	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-kgoBCf",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
          style={Object {}}
          visible={true}
        >
          <div
            className="ui-button-text nohover sc-kgoBCf dkAsaB"
            disabled={true}
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              notheme={false}
              obj="Icon"
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              <Wrapper
                bottom=""
                className=""
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage=""
                focus={false}
                height=""
                iconName="bomb"
                id=""
                imageFile=""
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                notheme={false}
                obj="Icon"
                onError={[Function]}
                padding=""
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                theme={null}
                tooltip=""
                top=""
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "titleBarBackgroundColor": "#004358",
                      "titleBarForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.i
                    bottom=""
                    className="ui-icon fa fa-fw fa-bomb"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    iconName="bomb"
                    id=""
                    imageFile=""
                    left=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="Icon"
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    visible={true}
                    width=""
                    xcss={null}
                  >
                    <StyledComponent
                      bottom=""
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage=""
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-gqjmRU",
                            "isStatic": false,
                            "lastClassName": "iCGQxQ",
                            "rules": Array [
                              "
	text-align: center;
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
",
                            ],
                          },
                          "displayName": "styled.i",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-gqjmRU",
                          "target": "i",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height=""
                      iconName="bomb"
                      id=""
                      imageFile=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="Icon"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-gqjmRU iCGQxQ"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </StyledComponent>
                  </styled.i>
                </ThemeProvider>
              </Wrapper>
            </Icon>
            <styled.div
              justify={1}
              sizing="normal"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-chPdSV",
                      "isStatic": false,
                      "lastClassName": "eCsFtU",
                      "rules": Array [
                        "
	flex: 1;
	padding: 0 0.2em;
	text-align: ",
                        [Function],
                        ";
	",
                        [Function],
                        ";

	span {
		margin: 0 auto;
		user-select: none;
	}
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-chPdSV",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                justify={1}
                sizing="normal"
              >
                <div
                  className="sc-chPdSV eCsFtU"
                />
              </StyledComponent>
            </styled.div>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonText>
`;

exports[`Test making a ButtonText control invisible 1`] = `
<ButtonText
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  justify={1}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noicon={false}
  noripple={false}
  notheme={false}
  obj="ButtonText"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  text=""
  theme={null}
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    iconName="bomb"
    id=""
    imageFile=""
    justify={1}
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noicon={false}
    noripple={false}
    notheme={false}
    obj="ButtonText"
    onClick={[MockFunction]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    text=""
    theme={null}
    tooltip=""
    top=""
    visible={false}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "titleBarBackgroundColor": "#004358",
          "titleBarForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-button-text ripple"
        disabled={false}
        onClick={[Function]}
        style={Object {}}
        visible={false}
      >
        <StyledComponent
          className="ui-button-text ripple"
          disabled={false}
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-kgoBCf",
                "isStatic": false,
                "lastClassName": "kESvqt",
                "rules": Array [
                  "
	",
                  "
	align-items: center;
	box-sizing: border-box;
	cursor: default;
	display: flex;
	height: 100%;
	justify-content: center;
	line-height: inherit;
	outline: none;
	overflow: visible;
	position: relative;
	user-select: none;
	width: 100%;
",
                  "

	&:not(.nohover):hover {
		background-color: ",
                  [Function],
                  " ",
                  [Function],
                  ";
	}

	",
                  [Function],
                  "
	",
                  [Function],
                  "
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-kgoBCf",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          onClick={[Function]}
          style={Object {}}
          visible={false}
        >
          <div
            className="ui-button-text ripple sc-kgoBCf kESvqt"
            disabled={false}
            onClick={[Function]}
            style={Object {}}
          >
            <Icon
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              id=""
              imageFile=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              notheme={false}
              obj="Icon"
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              <Wrapper
                bottom=""
                className=""
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage=""
                focus={false}
                height=""
                iconName="bomb"
                id=""
                imageFile=""
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                notheme={false}
                obj="Icon"
                onError={[Function]}
                padding=""
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                theme={null}
                tooltip=""
                top=""
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "titleBarBackgroundColor": "#004358",
                      "titleBarForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.i
                    bottom=""
                    className="ui-icon fa fa-fw fa-bomb"
                    contentEditable={false}
                    controlled={true}
                    direction="right"
                    disabled={false}
                    err={null}
                    errorMessage=""
                    focus={false}
                    height=""
                    iconName="bomb"
                    id=""
                    imageFile=""
                    left=""
                    location="none"
                    noedit={false}
                    nohover={false}
                    noripple={false}
                    notheme={false}
                    obj="Icon"
                    padding=""
                    selected={false}
                    sizing="normal"
                    style={Object {}}
                    testing={true}
                    theme={null}
                    tooltip=""
                    top=""
                    visible={true}
                    width=""
                    xcss={null}
                  >
                    <StyledComponent
                      bottom=""
                      className="ui-icon fa fa-fw fa-bomb"
                      contentEditable={false}
                      controlled={true}
                      direction="right"
                      disabled={false}
                      err={null}
                      errorMessage=""
                      focus={false}
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-gqjmRU",
                            "isStatic": false,
                            "lastClassName": "iCGQxQ",
                            "rules": Array [
                              "
	text-align: center;
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
	",
                              [Function],
                              "
",
                            ],
                          },
                          "displayName": "styled.i",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-gqjmRU",
                          "target": "i",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      height=""
                      iconName="bomb"
                      id=""
                      imageFile=""
                      left=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      notheme={false}
                      obj="Icon"
                      padding=""
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={null}
                      tooltip=""
                      top=""
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <i
                        className="ui-icon fa fa-fw fa-bomb sc-gqjmRU iCGQxQ"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        height=""
                        id=""
                        selected={false}
                        style={Object {}}
                        width=""
                      />
                    </StyledComponent>
                  </styled.i>
                </ThemeProvider>
              </Wrapper>
            </Icon>
            <styled.div
              justify={1}
              sizing="normal"
            >
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-chPdSV",
                      "isStatic": false,
                      "lastClassName": "eCsFtU",
                      "rules": Array [
                        "
	flex: 1;
	padding: 0 0.2em;
	text-align: ",
                        [Function],
                        ";
	",
                        [Function],
                        ";

	span {
		margin: 0 auto;
		user-select: none;
	}
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-chPdSV",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                justify={1}
                sizing="normal"
              >
                <div
                  className="sc-chPdSV eCsFtU"
                />
              </StyledComponent>
            </styled.div>
          </div>
        </StyledComponent>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</ButtonText>
`;

exports[`Test retrieval of ButtonText props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "justify": 1,
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noicon": false,
  "noripple": false,
  "notheme": false,
  "obj": "ButtonText",
  "onClick": [Function],
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "text": "",
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
